@@ -1927,15 +1927,12 @@ ripng_event (enum ripng_event event, int sock)
 static void
 ripng_vty_out_uptime (struct vty *vty, struct ripng_info *rinfo)
 {
-  struct timeval timer_now;
   time_t clock;
   struct tm *tm;
 #define TIME_BUF 25
   char timebuf [TIME_BUF];
   struct thread *thread;
   
-  gettimeofday (&timer_now, NULL);
-
   if ((thread = rinfo->t_timeout) != NULL)
     {
       clock = thread_timer_remain_second (thread);
